# fd-py

./: README.md  makefile  pyproject.toml
docs/: ide_user_setting.md
src/: main.py
src/common/: __init__.py  config.py  config_properties.py
src/flightdeck_etl/: main.py  main2.py
src/flightdeck_etl/airflow_dag/: airflow_helpers.py  client_dag.py
src/flightdeck_etl/configurations/: appsettings.production.json  config.py  config_properties.py
src/flightdeck_etl/di_container/: di.py
src/flightdeck_etl/modules/sev/contracts/: iclient_service.py
src/flightdeck_etl/modules/sev/services/: client_service.py
src/flightdeck_etl/shared/: __init__.py
src/flightdeck_etl/shared/apis/: api_client.py
src/flightdeck_etl/shared/connections/: database_connection.py
src/flightdeck_etl/shared/constants/: app_constants.py  app_enum.py
src/flightdeck_etl/shared/date_time_utils/: date_time_provider.py
src/flightdeck_etl/shared/emails/: email_service.py
src/flightdeck_etl/shared/helpers/: app_helpers.py  json_helpers.py
src/flightdeck_etl/shared/logging/: loggers.py
src/flightdeck_etl/shared/models/: client_model.py
src/flightdeckpy/: main.py
src/flightdeckpy/common/: __init__.py  config.py  logging.py
src/flightdeckpy/common/utils/: date_time_provider.py
src/flightdeckpy/configuration/: appsettings.json
